# golang-lld

./: README.md
elevator-system/go/: elevator.go  main.go
elevator-system/go-without-multithreading/: elevator.go  elevator_controller.go  enums.go  main.go  models.go
elevator-system/java/: Direction.java  Elevator.java  ElevatorController.java  Main.java  Request.java
elevator-system/java-without-multithreading/: Main.java  Request.java
elevatorSystem/: README.md
elevatorSystem/go/: elevator_controller.go  models.go
elevatorSystem/go-without-multithreading/: elevator.go  main.go  models.go
elevatorSystem/java/: Elevator.java
elevatorSystem/java-without-multithreading/: Direction.java  Elevator.java  ElevatorController.java  Main.java
elevatorSystem/practice1/: Direction.java  Elevator.java  ElevatorController.java  Main.java  Request.java  RequestType.java
food-ordering-system/go-without-multithreading/: main.go
food-ordering-system/java-without-multithreading/: Main.java
foodOrderingSystem/go-without-multithreading/: main.go
foodOrderingSystem/java-without-multithreading/: sources.txt
movie-ticket-system/: README.md
movie-ticket-system/Go/: enums.go  main.go  models.go  movie_ticket_booking_system.go  movie_ticket_booking_system_test.go
movie-ticket-system/go-without-multithreading/: main.go  models.go  movie_ticket_booking_system.go
parking-lot/: README.md  main.go
parking-lot/cpp/: CMakeLists.txt  Level.cpp  Level.hpp  Models.hpp  ParkingLot.cpp  ParkingLot.hpp  main.cpp
parking-lot/golang/: level.go  (+4 more)
splitwise/: README.md
(+135 files in other folders)
